--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
 
  }
 
- @media (min-width: 35em) {
+ @media (min-width: 35rem) {
      :root {
          --fs-800: 3.2rem;
          --fs-700: 2.8rem;
@@ -40,7 +40,7 @@
 
  }
 
- @media (min-width: 45em) {
+ @media (min-width: 45rem) {
      :root {
          --fs-800: 3.6rem;
          --fs-700: 3.2rem;
@@ -51,8 +51,6 @@
      }
  }
 
-
-
  */
  /* Boz sizing */
 
@@ -61,8 +59,6 @@
  *::after {
      box-sizing: border-box;
  }
-
- /* Reset margins */
 
  body,
  h1,
@@ -86,7 +82,6 @@
      font-weight: 400;
  }
 
-
  body {
      font-family: var(--ff-inter);
      font-size: var(--fs-400);
@@ -96,13 +91,10 @@
      min-height: 100vh;
      display: grid;
      grid-template-rows: min-content 1fr;
-
-
      overflow-x: hidden;
      -webkit-user-select: none;
      -ms-user-select: none;
      user-select: none;
-
  }
 
  img {
@@ -124,7 +116,6 @@
  select {
      font: inherit;
      -webkit-tap-highlight-color: transparent;
-
  }
 
  @media (prefers-reduced-motion: reduce) {
@@ -146,7 +137,7 @@
      min-height: 100vh;
      display: flex;
      flex-direction: column;
-     margin-bottom: 2rem;
+     margin-bottom: 3rem;
      overflow-y: hidden;
  }
 
@@ -164,7 +155,6 @@
      height: 7rem;
      background-color: var(--primary-color-40);
      padding-block: 0.6rem;
-
  }
 
  .site--logo {
@@ -190,13 +180,11 @@
 
  .login--link {
      display: inline-flex;
-
  }
 
  .login--icon {
      height: 1.2rem;
      width: 1.2rem;
-
  }
 
  /*Home */
@@ -205,7 +193,6 @@
      background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("./assets/images/home.png") no-repeat center;
      background-size: cover;
      height: 100vh;
-
  }
 
  .home--container {
@@ -224,7 +211,6 @@
      font-size: var(--fs-600);
      font-weight: bold;
      line-height: 3rem;
-
  }
 
  .home--text {
@@ -244,8 +230,6 @@
      border-radius: 8px;
      padding: 1rem 1.8rem;
      transition: transform .5s ease-in-out;
-
-
  }
 
  .findVan--btn:hover {
@@ -264,7 +248,6 @@
      background-color: var(--neutral-color-black);
      font-size: var(--fs-300);
      color: var(--primary-color-20);
-
  }
 
 
@@ -273,8 +256,6 @@
  .about--container {
      display: flex;
      flex-direction: column;
-     margin-bottom: 2rem;
-
  }
 
  .about-img-container {
@@ -290,7 +271,6 @@
      margin-top: 3rem;
      padding-inline: 1.3rem;
      text-align: left;
-
  }
 
  .about--title {
@@ -304,7 +284,6 @@
      font-weight: 500;
      font-size: var(--fs-300);
      color: var(--neutral-color-black);
-
  }
 
  .about--explore {
@@ -316,8 +295,6 @@
      margin: 2rem 1.3rem;
      padding: 1.8rem 1.5rem 2rem 1rem;
      border-radius: .3rem;
-
-
  }
 
  .about-explore-text {
@@ -340,7 +317,6 @@
 
  .explore--btn:hover {
      transform: scale(1.05);
-
  }
 
  /* Vans */
@@ -364,7 +340,6 @@
      gap: 1rem;
      margin-top: 1.2rem;
      font-size: var(--fs-300);
-
  }
 
  .vans--filter>button {
@@ -386,10 +361,7 @@
      padding: .3rem .8rem;
      text-transform: capitalize;
      color: var(--primary-color-20);
-
-
  }
-
 
  .vans--filter>.clear--btn {
      padding-left: 0.8rem;
@@ -407,14 +379,12 @@
  .luxury--btn.selected {
      background-color: var(--neutral-color-black);
      color: var(--primary-color-20);
-
  }
 
  .rugged--btn:hover,
  .rugged--btn.selected {
      background-color: var(--green-color-80);
      color: var(--primary-color-20);
-
  }
 
  .clear--btn:hover {
@@ -448,7 +418,6 @@
      padding: 3rem 1.7rem 2rem 1.7rem;
      font-size: var(--fs-300);
      text-decoration: none;
-
  }
 
  .van--img {
@@ -484,10 +453,11 @@
  }
 
  .van-details-info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+     display: flex;
+     flex-direction: column;
+     align-items: flex-start;
  }
+
  .return-details-btn {
      margin-top: 1rem;
      border: none;
@@ -495,13 +465,10 @@
      text-align: left;
      font-size: var(--fs-300);
      color: var(--neutral-color-gray1);
-
  }
 
  .return-details-btn>span {
      margin-right: .2rem;
-
-
  }
 
  .return-details-btn:hover {
@@ -511,7 +478,6 @@
  .van--details .van--image {
      border-radius: 0.6rem;
      margin-block: 2rem;
-
  }
 
  .van--btn {
@@ -532,7 +498,6 @@
      font-weight: 700;
      font-size: var(--fs-400);
      color: var(--neutral-color-gray1);
-
  }
 
  .van--description {
@@ -557,9 +522,6 @@
 
  }
 
- /*Layout*/
-
-
  /*HostLayout*/
 
  .host-van-navbar {
@@ -572,7 +534,6 @@
      font-size: var(--fs-300);
  }
 
-
  .host-van-single {
      display: flex;
      align-items: center;
@@ -581,7 +542,6 @@
      padding-block: 18px;
      padding-left: 24px;
      font-size: var(--fs-300);
-
  }
 
  .host-van-single>img {
@@ -595,7 +555,6 @@
      font-size: var(--fs-500);
      font-weight: 500;
  }
-
 
  .host-vans-list {
      padding-inline: 26px;
@@ -613,22 +572,28 @@
 
  /*Host Vans Details */
 
- .host-van-details--container {
+ .host-van-details--info {
      background-color: var(--primary-color-20);
      padding: 1.5rem;
      margin: 2rem 1.5rem;
  }
 
-
  .host-van-details {
      display: flex;
+     flex-direction: column;
      align-items: center;
  }
 
  .host-van-details-img {
+     align-self: flex-start;
      height: 40vw;
      border-radius: 5px;
      margin-right: 1.5rem;
+     margin-bottom: 1rem;
+ }
+
+ .host-van-details--info {
+     align-self: auto;
  }
 
  .host-van-details-info-text>h3 {
@@ -636,12 +601,9 @@
      margin-top: 1.2rem;
      font-weight: 700;
      font-size: var(--fs-400);
-
  }
 
-
  .host-van-details-info-text>h4 {
-     margin-block: 0;
      font-size: var(--fs-300);
  }
 
@@ -689,7 +651,6 @@
      align-items: center;
      background-color: var(--secondary-color-40);
  }
-
 
  .host-dashboard-earnings>.info>h1 {
      font-size: var(--fs-500);
@@ -812,7 +773,6 @@
      font-weight: bold;
  }
 
-
  .host--income .transaction {
      display: flex;
      justify-content: space-between;
@@ -866,8 +826,6 @@
      text-decoration: underline;
      font-weight: bold;
  }
-
-
 
  .host--reviews .review .info {
      display: flex;
@@ -925,7 +883,8 @@
      flex-direction: column;
      align-items: center;
      padding-inline: 2rem;
-     margin-top: 1rem;
+     margin-top: 3rem;
+     text-align: center;
  }
 
  .login--form {
@@ -943,6 +902,12 @@
      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
      font-weight: 400;
 
+ }
+
+ .login--error {
+     color: red;
+     font-weight: bold;
+     font-family: var(--fs-300);
  }
 
  .login--form>input:focus {
@@ -966,13 +931,15 @@
      margin-top: 1.8rem;
      color: var(--primary-color-20);
  }
+
  .user--data {
-    margin-top: 2rem;
-    text-align: center;
-    font-size: var(--fs-300);
+     margin-top: 2rem;
+     text-align: center;
+     font-size: var(--fs-300);
  }
- .user--data > h4 {
-    font-weight: bold;
+
+ .user--data>h4 {
+     font-weight: bold;
  }
 
  .login--form>button:disabled {
@@ -980,49 +947,74 @@
      cursor: not-allowed;
  }
 
- .van-details-wrapper {
-     display: flex;
- }
 
- @media (min-width: 35em) {
+ @media (min-width: 35rem) {
      .home--container {
          text-align: center;
          margin-inline: 3rem;
          gap: 2rem;
      }
-     .about--container {
-         margin-inline: 3rem;
-     }
-     
+
+    
  }
 
- @media (min-width: 45em) {
+ @media (min-width:45rem) {
+
+     /*Home*/
      .home--container {
          text-align: center;
          margin-inline: 8rem;
          gap: 3rem;
      }
+
+     /*About*/
      .about--container {
-         margin-top: 2rem;
+         margin-top: 5rem;
      }
+
+     .about--container {
+         flex-direction: row;
+     }
+
+     .about--img {
+         max-width: 50vw;
+         max-height: 60vh;
+     }
+
+     .about--info {
+         margin: 0;
+
+     }
+
+     /*Van-details*/
      .van--details {
          flex-direction: row;
-         margin-right:1rem ;
+         margin-right: 1rem;
          gap: 1rem;
      }
-     
- .van-details-info {
-    justify-content: center;
-    gap: 1.5rem;  
- }
+
+     .van-details-info {
+         justify-content: center;
+         gap: 1.5rem;
+     }
+
      .van--details .van--image {
          max-width: 60vw;
      }
+
      .van--img {
-        height: 35vw;
+         height: 35vw;
      }
+
+     /*Host*/
+
      .img--graph {
-        margin-top:1rem;
-        max-width:40vw ;
+         margin-top: 1rem;
+         max-width: 40vw;
      }
+
+     .host-van-details {
+         flex-direction: row;
+     }
+
  }
