--- a/src/index.css
+++ b/src/index.css
@@ -526,12 +526,16 @@
 
  .host-van-navbar {
      display: flex;
-     justify-content: star;
      margin-top: 1rem;
  }
 
- .host-van-navbar>a {
+ .host-van-navbar > a {
      font-size: var(--fs-300);
+     color:var(--secondary-color-100) ;
+ }
+ .host-van-navbar > a:hover {
+    color: var(--secondary-color-80);
+    text-decoration: underline;
  }
 
  .host-van-single {
@@ -581,7 +585,6 @@
  .host-van-details {
      display: flex;
      flex-direction: column;
-     align-items: center;
  }
 
  .host-van-details-img {
@@ -590,10 +593,6 @@
      border-radius: 5px;
      margin-right: 1.5rem;
      margin-bottom: 1rem;
- }
-
- .host-van-details--info {
-     align-self: auto;
  }
 
  .host-van-details-info-text>h3 {
@@ -612,6 +611,7 @@
  .host-van-description-info {
      display: flex;
      flex-direction: column;
+     gap: 1rem;
      font-size: var(--fs-300);
  }
 
@@ -636,7 +636,7 @@
  }
 
  .host-van-photo {
-     max-width: 30vw;
+     max-width: 20vw;
      border-radius: .2rem;
      margin-top: 2rem;
  }
@@ -754,7 +754,7 @@
 
  .img--graph {
      margin-top: 1rem;
-     max-width: 60vw;
+     max-width: 100%;
  }
 
  .host--income .info-header>h3 {
@@ -1009,12 +1009,15 @@
      /*Host*/
 
      .img--graph {
-         margin-top: 1rem;
-         max-width: 50vw;
+        min-width: 35vw;
+         max-width: 40vw;
      }
 
      .host-van-details {
          flex-direction: row;
+     }
+     .host-van-description-info {
+        gap: 3rem;
      }
 
  }
